--- a/pokemon.ini
+++ b/pokemon.ini
@@ -1966,38 +1966,35 @@ skills = Athletics:3d6, Acrobatics:1d6, Combat:2d6, Stealth:3d6+2, Perception:3d
 level_moves = 5:Poison Sting, 8:Screech, 12:Pursuit, 15:Protect, 19:Poison Tail, 22:Iron Defense, 23:Bug Bite, 28:Venoshock, 32:Agility, 37:Steamroller, 41:Toxic, 46:Rock Climb, 50:Double-Edge
 tm_moves = Toxic, Venoshock, Hidden Power, Sunny Day, Protect, Frustration, Solar Beam, Return, Double Team, Sludge Bomb, Facade, Rest, Attract, Round, Payback, Gyro Ball, Struggle Bug, Infestation, Poison Jab, Swagger, Sleep Talk, Substitute, Rock Smash
 tutor_moves = Bug Bite, Endeavor, Iron Defense, Rollout(N), Sleep Talk, Snore
-; [Scolipede]
-; page = 77
-; legendary = False
-; base_hp = 
-; base_attack = 
-; base_defense = 
-; base_special_attack = 
-; base_special_defense = 
-; base_speed = 
-; types = 
-; basic_abilities = 
-; advanced_abilities = 
-; high_ability = 
-; evolutions = 
-; minimum_level = 30
-; diets = 
-; habitats = 
-; egg_groups = 
-; gender_ratio_m = 
-; average_hatch_rate_days = 
-; family = Venipede, Whirlipede, Scolipede
-; capabilities = 
-; height = 
-; height_class = 
-; weight = 
-; weight_class = 
-; skills = Athletics:, Acrobatics:, Combat:, Stealth:, Perception:, Focus:
-; level_moves = 
-; hm_moves = 
-; tm_moves = 
-; egg_moves = 
-; tutor_moves = 
+[Scolipede]
+page = 77
+legendary = False
+base_hp = 6
+base_attack = 10
+base_defense = 9
+base_special_attack = 6
+base_special_defense = 7
+base_speed = 11
+types = Bug, Poison
+basic_abilities = Poison Point, Vanguard
+advanced_abilities = Swarm, Speed Boost
+high_ability = Rock Head
+minimum_level = 30
+diets = Herbivore
+habitats = Forest
+egg_groups = Bug
+gender_ratio_m = 50
+family = Venipede, Whirlipede, Scolipede
+capabilities = Overland:8, Swim:4, High Jump:2, Long Jump:2, Power:6, Naturewalk:Grassland, Naturewalk:Forest, Wallclimber, Mountable:1
+height = 8'2",2.5m
+height_class = Large
+weight = 442.0 lbs.,200.5kg 
+weight_class = 6
+skills = Athletics:4d6+3, Acrobatics:3d6, Combat:4d6, Stealth:3d6+2, Perception:4d6, Focus:4d6+2
+level_moves = 5:Poison Sting, 8:Screech, 12:Pursuit, 15:Protect, 19:Poison Tail, 23:Bug Bite, 28:Venoshock, 30:Baton Pass, 33:Agility, 39:Steamroller, 44:Toxic, 50:Rock Climb, 55:Double-Edge, 65:Megahorn
+hm_moves = Cut, Strength
+tm_moves = Toxic, Venoshock, Hidden Power, Sunny Day, Hyper Beam, Protect, Frustration, Solar Beam, Earthquake, Return, Dig, Double Team, Sludge Bomb, Rock Tomb, Facade, Rest, Attract, Round, Payback, Giga Impact, Gyro Ball, Swords Dance, Struggle Bug, Bulldoze, Rock Slide, X-Scissor, Infestation, Poison Jab, Swagger, Sleep Talk, Substitute, Rock Smash
+tutor_moves = Aqua Tail, Bug Bite, Endeavor, Iron Defense, Iron Tail, Megahorn (N), Rollout (N), Sleep Talk, Snatch, Snore, Superpower
 [Fletchling]
 page = 95
 legendary = False
