Added Wurmple and evolutions.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -1995,6 +1995,147 @@ level_moves = 5:Poison Sting, 8:Screech, 12:Pursuit, 15:Protect, 19:Poison Tail,
 hm_moves = Cut, Strength
 tm_moves = Toxic, Venoshock, Hidden Power, Sunny Day, Hyper Beam, Protect, Frustration, Solar Beam, Earthquake, Return, Dig, Double Team, Sludge Bomb, Rock Tomb, Facade, Rest, Attract, Round, Payback, Giga Impact, Gyro Ball, Swords Dance, Struggle Bug, Bulldoze, Rock Slide, X-Scissor, Infestation, Poison Jab, Swagger, Sleep Talk, Substitute, Rock Smash
 tutor_moves = Aqua Tail, Bug Bite, Endeavor, Iron Defense, Iron Tail, Megahorn (N), Rollout (N), Sleep Talk, Snatch, Snore, Superpower
+[Wurmple]
+page = 78
+legendary = False
+base_hp = 5
+base_attack = 5
+base_defense = 4
+base_special_attack = 2
+base_special_defense = 3
+base_speed = 2
+types = Bug
+basic_abilities = Shield Dust
+advanced_abilities = Silk Threads, Run Away, Poison Point
+high_ability = Suction Cups
+evolutions = Silcoon,5,Split;Cascoon,5,Split
+minimum_level = 1
+diets = Herbivore
+habitats = Forest, Rainforest
+egg_groups = Bug
+gender_ratio_m = 50
+average_hatch_rate_days = 7
+family = Wurmple, Silcoon, Beautifly, Cascoon, Dustox
+capabilities = Overland:3, Swim:2, Burrow:1, High Jump:1, Long Jump:1, Power:1, Naturewalk:Grassland, Naturewalk:Forest, Threaded, Split Evolution, Wallclimber, Underdog
+height = 1'0",0.3m
+height_class = Small
+weight = 7.9 lbs.,3.6kg
+weight_class = 1
+skills = Athletics:3d6, Acrobatics:1d6, Combat:2d6, Stealth:2d6, Perception:2d6, Focus:3d6
+level_moves = 1:String Shot,1:Tackle,5:Poison Sting,15:Bug Bite
+tutor_moves = Bug Bite, Electroweb, Snore, String Shot
+[Silcoon]
+page = 79
+legendary = False
+base_hp = 5
+base_attack = 4
+base_defense = 6
+base_special_attack = 3
+base_special_defense = 3
+base_speed = 2
+types = Bug
+basic_abilities = Shed Skin
+advanced_abilities = Silk Threads, Battle Armor, Overcoat
+high_ability = Sturdy
+evolutions = Beautifly,10
+minimum_level = 5
+diets = Nullivore
+habitats = Forest, Rainforest
+egg_groups = Bug
+gender_ratio_m = 50
+family = Wurmple, Silcoon, Beautifly, Cascoon, Dustox
+capabilities = Overland:1, Swim:1, High Jump:1, Long Jump:1, Power:1, Naturewalk:Grassland, Naturewalk:Forest, Threaded, Underdog
+height = 2'0",0.6m
+height_class = Small
+weight = 22.0 lbs.,10.0kg
+weight_class = 1
+skills = Athletics:1d6, Acrobatics:1d6, Combat:2d6, Stealth:2d6, Perception:2d6, Focus:3d6
+level_moves = 5:Harden
+tutor_moves = Bug Bite, Electroweb, Iron Defense, String Shot
+[Beautifly]
+page = 80
+legendary = False
+base_hp = 6
+base_attack = 7
+base_defense = 5
+base_special_attack = 10
+base_special_defense = 5
+base_speed = 7
+types = Bug, Flying
+basic_abilities = Pride
+advanced_abilities = Rivalry, Cruelty, Swarm
+high_ability = Sap Sipper
+minimum_level = 10
+diets = Herbivore
+habitats = Forest, Rainforest
+egg_groups = Bug
+gender_ratio_m = 50
+family = Wurmple, Silcoon, Beautifly, Cascoon, Dustox
+capabilities = Overland:2, Swim:2, Sky:9, High Jump:1, Long Jump:1, Power:3, Naturewalk:Grassland, Naturewalk:Forest, Underdog
+height = 3'3",1.0m
+height_class = Medium
+weight = 62.6 lbs.,28.4kg
+weight_class = 3
+skills = Athletics:3d6, Acrobatics:3d6, Combat:2d6, Stealth:2d6, Perception:6d6+3, Focus:5d6
+level_moves = 10:Gust, 12:Absorb, 15:Stun Spore, 17:Morning Sun, 20:Air Cutter, 22:Mega Drain, 25:Silver Wind, 27:Attract, 30:Whirlwind, 32:Giga Drain, 35:Bug Buzz, 37:Rage, 40:Quiver Dance
+tm_moves = Toxic, Venoshock, Hidden Power, Sunny Day, Hyper Beam, Protect, Roost, Safeguard, Frustration, Solar Beam, Return, Psychic, Shadow Ball, Double Team, Aerial Ace, Facade, Rest, Attract, Thief, Round, Energy Ball, Acrobatics, Giga Impact, Flash, Struggle Bug, Infestation, Swagger, Sleep Talk, U-Turn, Substitute
+tutor_moves = Air Cutter, Bug Bite, Defog, Double-Edge, Electroweb, Giga Drain, Ominous Wind, Roost, Secret Power, Signal Beam, Sleep Talk, Snore, String Shot, Swift, Tailwind, Twister
+[Cascoon]
+page = 81
+legendary = False
+base_hp = 5
+base_attack = 4
+base_defense = 6
+base_special_attack = 3
+base_special_defense = 3
+base_speed = 2
+types = Bug
+basic_abilities = Shed Skin
+advanced_abilities = Silk Threads, Battle Armor, Overcoat
+high_ability = Sturdy
+evolutions = Dustox,10
+minimum_level = 5
+diets = Nullivore
+habitats = Forest, Rainforest
+egg_groups = Bug
+gender_ratio_m = 50
+family = Wurmple, Silcoon, Beautifly, Cascoon, Dustox
+capabilities = Overland:1, Swim:2, High Jump:1, Long Jump:1, Power:1, Naturewalk:Grassland, Naturewalk:Forest, Threaded, Underdog
+height = 2'4",0.7m
+height_class = Small
+weight = 25.4 lbs.,11.5kg
+weight_class = 1
+skills = Athletics:1d6, Acrobatics:1d6, Combat:2d6, Stealth:2d6, Perception:2d6, Focus:3d6
+level_moves = 5:Harden
+tutor_moves = Bug Bite, Electroweb, Iron Defense, String Shot
+[Dustox]
+page = 82
+legendary = False
+base_hp = 6
+base_attack = 5
+base_defense = 7
+base_special_attack = 5
+base_special_defense = 9
+base_speed = 7
+types = Bug, Poison
+basic_abilities = Shield Dust
+advanced_abilities = Compound Eyes, Dust Cloud, Flutter
+high_ability = Effect Spore
+minimum_level = 10
+diets = Herbivore
+habitats = Forest, Rainforest
+egg_groups = Bug
+gender_ratio_m = 50
+family = Wurmple, Silcoon, Beautifly, Cascoon, Dustox
+capabilities = Overland:2, Swim:2, Sky:9, High Jump:1, Long Jump:1, Power:2, Underdog
+height = 3'11",1.2m
+height_class = Medium
+weight = 69.7 lbs.,31.6kg
+weight_class = 3
+skills = Athletics:3d6, Acrobatics:3d6, Combat:2d6, Stealth:2d6, Perception:6d6+3, Focus:5d6
+level_moves = 10:Gust, 12:Confusion, 15:Poison Powder, 17:Moonlight, 20:Venoshock, 22:Psybeam, 25:Silver Wind, 27:Light Screen, 30:Whirlwind, 32:Toxic, 35:Bug Buzz, 37:Protect, 40:Quiver Dance
+tm_moves = Toxic, Venoshock, Hidden Power, Sunny Day, Hyper Beam, Light Screen, Protect, Roost, Frustration, Solar Beam, Return, Psychic, Shadow Ball, Double Team, Sludge Bomb, Aerial Ace, Facade, Rest, Attract, Thief, Round, Energy Ball, Acrobatics, Giga Impact, Flash, Struggle Bug, Infestation, Swagger, Sleep Talk, U-Turn, Substitute
+tutor_moves = Air Cutter, Bug Bite, Defog, Double-Edge, Electroweb, Giga Drain, Ominous Wind, Roost, Signal Beam, Sleep Talk, Snore, String Shot, Swift, Tailwind, Twister
 [Fletchling]
 page = 95
 legendary = False
