Added Scatterbug, Spewpa, Vivillon.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -2136,6 +2136,93 @@ skills = Athletics:3d6, Acrobatics:3d6, Combat:2d6, Stealth:2d6, Perception:6d6+
 level_moves = 10:Gust, 12:Confusion, 15:Poison Powder, 17:Moonlight, 20:Venoshock, 22:Psybeam, 25:Silver Wind, 27:Light Screen, 30:Whirlwind, 32:Toxic, 35:Bug Buzz, 37:Protect, 40:Quiver Dance
 tm_moves = Toxic, Venoshock, Hidden Power, Sunny Day, Hyper Beam, Light Screen, Protect, Roost, Frustration, Solar Beam, Return, Psychic, Shadow Ball, Double Team, Sludge Bomb, Aerial Ace, Facade, Rest, Attract, Thief, Round, Energy Ball, Acrobatics, Giga Impact, Flash, Struggle Bug, Infestation, Swagger, Sleep Talk, U-Turn, Substitute
 tutor_moves = Air Cutter, Bug Bite, Defog, Double-Edge, Electroweb, Giga Drain, Ominous Wind, Roost, Signal Beam, Sleep Talk, Snore, String Shot, Swift, Tailwind, Twister
+[Scatterbug]
+page = 83
+legendary = False
+base_hp = 4
+base_attack = 4
+base_defense = 4
+base_special_attack = 3
+base_special_defense = 4
+base_speed = 4
+types = Bug
+basic_abilities = Compound Eyes
+advanced_abilities = Shield Dust, Friend Guard, Suction Cups
+high_ability = Effect Spore
+evolutions = Spewpa,5
+minimum_level = 1
+diets = Herbivore
+habitats = Forest, Grassland
+egg_groups = Bug
+gender_ratio_m = 50
+average_hatch_rate_days = 7
+family = Scatterbug, Spewpa, Vivillon
+capabilities = Overland:3, Swim:2, High Jump:0, Long Jump:0, Power:1, Naturewalk:Grassland, Naturewalk:Forest, Threaded, Underdog
+height = 1'0",0.3m
+height_class = Small
+weight = 5.5 lbs.,2.5 kg
+weight_class = 1
+skills = Athletics:1d6, Acrobatics:2d6, Combat:1d6, Stealth:3d6+1, Perception:2d6, Focus:2d6
+level_moves = 1:Tackle,1:String Shot,5:Stun Spore,15:Bug Bite
+egg_moves = Poison Powder, Rage Powder, Stun Spore
+tutor_moves = Bug Bite
+[Spewpa]
+page = 84
+legendary = False
+base_hp = 5
+base_attack = 2
+base_defense = 6
+base_special_attack = 3
+base_special_defense = 3
+base_speed = 3
+types = Bug
+basic_abilities = Compound Eyes
+advanced_abilities = Shed Skin, Friend Guard, Wonder Skin
+high_ability = Effect Spore
+evolutions = Vivillon,10
+minimum_level = 5
+diets = Herbivore
+habitats = Forest, Grassland
+egg_groups = Bug
+gender_ratio_m = 50
+family = Scatterbug, Spewpa, Vivillon
+capabilities = Overland:2, Swim:1, High Jump:0, Long Jump:0, Power:1, Naturewalk:Grassland, Naturewalk:Forest, Threaded, Underdog
+height = 1'0",0.3m
+height_class = Small
+weight = 18.5 lbs.,8.4 kg
+weight_class = 1
+skills = Athletics:1d6, Acrobatics:1d6, Combat:1d6, Stealth:3d6+2, Perception:3d6, Focus:3d6
+level_moves = 1:Harden,5:Protect
+tutor_moves = Bug Bite, Electroweb, Iron Defense
+[Vivillon]
+page = 85
+legendary = False
+base_hp = 8
+base_attack = 5
+base_defense = 5
+base_special_attack = 9
+base_special_defense = 5
+base_speed = 9
+types = Bug, Flying
+basic_abilities = Compound Eyes
+advanced_abilities = Shield Dust
+high_ability = Friend Guard
+evolutions = Wonder Skin
+minimum_level = Effect Spore
+diets = Herbivore
+habitats = Forest, Grassland
+egg_groups = bug
+gender_ratio_m = 50
+family = Scatterbug, Spewpa, Vivillon
+capabilities = Overland:3, Swim:1, Sky:8, High Jump:1, Long Jump:2, Power:1, Naturewalk:Grassland, Naturewalk:Forest, Threaded, Wallclimber, Underdog
+height = 3'11",1.2m
+height_class = Medium
+weight = 37.5 lbs.,17.0 kg
+weight_class = 1
+skills = Athletics:3d6, Acrobatics:4d6+2, Combat:2d6, Stealth:2d6, Perception:5d6+2, Focus:4d6
+level_moves = 10:Struggle Bug, 17:Psybeam, 21:Supersonic, 25:Draining Kiss, 31:Aromatherapy, 35:Bug Buzz, 41:Safeguard, 45:Quiver Dance, 50:Hurricane, 55:Powder
+tm_moves = Calm Mind, Toxic, Hidden Power, Sunny Day, Hyper Beam, Light Screen, Protect, Rain Dance, Roost, Safeguard, Frustration, Solar Beam, Return, Psychic, Double Team, Aerial Ace, Facade, Rest, Attract, Thief, Round, Energy Ball, Acrobatics, Giga Impact, Flash, Struggle Bug, Psych Up, Infestation, Dream Eater, Swagger, Sleep Talk, U-Turn, Substitute, Confide
+tutor_moves = Bug Bite, Electroweb, Endeavor, Giga Drain, Gust (N), Hold Hands, Light Screen (N), Poison Powder (N), Powder (N), Signal Beam, Sleep Powder (N), Snore, Stun Spore (N), Tailwind
 [Fletchling]
 page = 95
 legendary = False
