Added 'fossil' setting for all pokemon.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -4,6 +4,7 @@
 [Bulbasaur]
 page = 12
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 5
 base_defense = 5
@@ -36,6 +37,7 @@ tutor_moves = Bind,Body Slam,Bullet Seed,Defense Curl,Fury Cutter,Giga Drain,Gra
 [Ivysaur]
 page = 13
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 6
 base_defense = 6
@@ -66,6 +68,7 @@ tutor_moves = Bind,Body Slam,Bullet Seed,Defense Curl,Endure,Fury Cutter,Giga Dr
 [Venusaur]
 page = 14
 legendary = False
+fossil = False
 base_hp = 8
 base_attack = 8
 base_defense = 8
@@ -95,6 +98,7 @@ tutor_moves = Bind,Body Slam,Block,Bullet Seed,Defense Curl,Frenzy Plant,Fury Cu
 [Chikorita]
 page = 15
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 5
 base_defense = 7
@@ -127,6 +131,7 @@ tutor_moves = Ancient Power,Bullet Seed,Double-Edge,Fury Cutter,Giga Drain, Glas
 [Bayleef]
 page = 16
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 6
 base_defense = 8
@@ -157,6 +162,7 @@ tutor_moves = Ancient Power,Bullet Seed,Counter,Double-Edge,Fury Cutter,Giga Dra
 [Meganium]
 page = 17
 legendary = False
+fossil = False
 base_hp = 8
 base_attack = 8
 base_defense = 10
@@ -186,6 +192,7 @@ tutor_moves = Ancient Power,Bullet Seed,Counter,Double-Edge,Frenzy Plant,Fury Cu
 [Treecko]
 page = 18
 legendary = False
+fossil = False
 base_hp = 4
 base_attack = 5
 base_defense = 4
@@ -218,6 +225,7 @@ tutor_moves = Body Slam,Counter,Double-Edge,Drain Punch,Dynamic Punch,Endeavor,F
 [Grovyle]
 page = 19
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 7
 base_defense = 5
@@ -248,6 +256,7 @@ tutor_moves = Body Slam,Bullet Seed,Counter,Double-Edge,Drain Punch,Dynamic Punc
 [Sceptile]
 page = 20
 legendary = False
+fossil = False
 base_hp = 7
 base_attack = 9
 base_defense = 7
@@ -277,6 +286,7 @@ tutor_moves = Body Slam,Bullet Seed,Counter,Double-Edge,Dragon Pulse,Drain Punch
 [Turtwig]
 page = 21
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 7
 base_defense = 6
@@ -309,6 +319,7 @@ tutor_moves = Bullet Seed,Earth Power,Giga Drain,Grass Pledge,Iron Tail,Mud-Slap
 [Grotle]
 page = 22
 legendary = False
+fossil = False
 base_hp = 8
 base_attack = 9
 base_defense = 9
@@ -339,6 +350,7 @@ tutor_moves = Bullet Seed,Earth Power,Giga Drain,Grass Pledge,Iron Tail,Mud-Slap
 [Torterra]
 page = 23
 legendary = False
+fossil = False
 base_hp = 10
 base_attack = 11
 base_defense = 11
@@ -368,6 +380,7 @@ tutor_moves = Block,Bullet Seed,Earth Power,Frenzy Plant,Giga Drain,Grass Pledge
 [Snivy]
 page = 24
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 5
 base_defense = 6
@@ -400,6 +413,7 @@ tutor_moves = Aqua Tail,Bind,Gastro Acid,Giga Drain,Grass Pledge,Iron Tail,Knock
 [Servine]
 page = 25
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 6
 base_defense = 8
@@ -430,6 +444,7 @@ tutor_moves = Aqua Tail,Bind,Gastro Acid,Giga Drain,Grass Pledge,Iron Tail,Knock
 [Serperior]
 page = 26
 legendary = False
+fossil = False
 base_hp = 8
 base_attack = 8
 base_defense = 10
@@ -459,6 +474,7 @@ tutor_moves = Aqua Tail,Bind,Dragon Pulse,Frenzy Plant,Gastro Acid,Giga Drain,Gr
 [Chespin]
 page = 27
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 6
 base_defense = 7
@@ -491,6 +507,7 @@ tutor_moves = Drain Punch,Dual Chop,Endeavor,Focus Punch,Giga Drain,Grass Pledge
 [Quilladin]
 page = 28
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 8
 base_defense = 10
@@ -521,6 +538,7 @@ tutor_moves = Drain Punch,Dual Chop,Endeavor,Focus Punch,Giga Drain,Grass Pledge
 [Chesnaught]
 page = 29
 legendary = False
+fossil = False
 base_hp = 9
 base_attack = 11
 base_defense = 12
@@ -550,6 +568,7 @@ tutor_moves = Belly Drum (N),Block,Drain Punch,Dual Chop,Endeavor,Feint (N),Focu
 [Charmander]
 page = 30
 legendary = False
+fossil = False
 base_hp = 4
 base_attack = 5
 base_defense = 4
@@ -582,6 +601,7 @@ tutor_moves = Body Slam,Counter,Defense Curl,Double-Edge,Dynamic Punch,Fire Pled
 [Charmeleon]
 page = 31
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 6
 base_defense = 6
@@ -612,6 +632,7 @@ tutor_moves = Body Slam,Counter,Defense Curl,Double-Edge,Dynamic Punch,Fire Pled
 [Charizard]
 page = 32
 legendary = False
+fossil = False
 base_hp = 8
 base_attack = 8
 base_defense = 8
@@ -641,6 +662,7 @@ tutor_moves = Air Cutter,Air Slash(N),Blast Burn,Body Slam,Counter,Defense Curl,
 [Cyndaquil]
 page = 33
 legendary = False
+fossil = False
 base_hp = 4
 base_attack = 5
 base_defense = 4
@@ -673,6 +695,7 @@ tutor_moves = Body Slam,Covet,Fire Pledge,Heat Wave,Mud-Slap,Rollout,Sleep Talk,
 [Quilava]
 page = 34
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 6
 base_defense = 6
@@ -703,6 +726,7 @@ tutor_moves = Body Slam,Covet,Fire Pledge,Focus Punch,Fury Cutter,Heat Wave,Mud-
 [Typhlosion]
 page = 35
 legendary = False
+fossil = False
 base_hp = 8
 base_attack = 8
 base_defense = 8
@@ -732,6 +756,7 @@ tutor_moves = Blast Burn,Body Slam,Counter,Covet,Dynamic Punch,Fire Pledge,Fire 
 [Torchic]
 page = 36
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 6
 base_defense = 4
@@ -764,6 +789,7 @@ tutor_moves = Body Slam,Bounce,Double-Edge,Heat Wave,Helping Hand,Fire Pledge,La
 [Combusken]
 page = 37
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 9
 base_defense = 6
@@ -794,6 +820,7 @@ tutor_moves = Body Slam,Bounce,Counter,Double-Edge,Dual Chop,Dynamic Punch,Fire 
 [Blaziken]
 page = 38
 legendary = False
+fossil = False
 base_hp = 8
 base_attack = 12
 base_defense = 7
@@ -823,6 +850,7 @@ tutor_moves = Blast Burn, Body Slam, Bounce, Counter, Double-Edge, Dual Chop, Dy
 [Chimchar]
 page = 39
 legendary = False
+fossil = False
 base_hp = 4
 base_attack = 6
 base_defense = 4
@@ -855,6 +883,7 @@ tutor_moves = Covet, Endeavor, Fire Pledge, Fire Punch, Gunk Shot, Heat Wave, He
 [Monferno]
 page = 40
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 8
 base_defense = 5
@@ -885,6 +914,7 @@ tutor_moves = Covet, Dual Chop, Endeavor, Fire Pledge, Fire Punch, Focus Punch, 
 [Infernape]
 page = 41
 legendary = False
+fossil = False
 base_hp = 8
 base_attack = 10
 base_defense = 7
@@ -914,6 +944,7 @@ tutor_moves = Blast Burn, Covet, Dual Chop, Endeavor, Fire Pledge, Fire Punch, F
 [Tepig]
 page = 42
 legendary = False
+fossil = False
 base_hp = 7
 base_attack = 6
 base_defense = 5
@@ -946,6 +977,7 @@ tutor_moves = Covet, Endeavor, Fire Pledge, Heat Wave, Helping Hand, Iron Tail, 
 [Pignite]
 page = 43
 legendary = False
+fossil = False
 base_hp = 9
 base_attack = 9
 base_defense = 6
@@ -976,6 +1008,7 @@ tutor_moves = Covet, Endeavor, Fire Pledge, Fire Punch, Heat Wave, Helping Hand,
 [Emboar]
 page = 44
 legendary = False
+fossil = False
 base_hp = 11
 base_attack = 12
 base_defense = 7
@@ -1005,6 +1038,7 @@ tutor_moves = Blast Burn, Block, Covet, Endeavor, Fire Pledge, Fire Punch, Hamme
 [Fennekin]
 page = 45
 legendary = False
+fossil = False
 base_hp = 4
 base_attack = 5
 base_defense = 4
@@ -1037,6 +1071,7 @@ tutor_moves = Covet, Fire Pledge, Foul Play, Heat Wave, Iron Tail, Magic Coat, M
 [Braixen]
 page = 46
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 6
 base_defense = 6
@@ -1067,6 +1102,7 @@ tutor_moves = Covet, Fire Pledge, Fire Punch, Foul Play, Heat Wave, Iron Tail, L
 [Delphox]
 page = 47
 legendary = False
+fossil = False
 base_hp = 8
 base_attack = 7
 base_defense = 7
@@ -1096,6 +1132,7 @@ tutor_moves = Blast Burn, Covet, Fire Pledge, Fire Punch, Foul Play, Future Sigh
 [Squirtle]
 page = 48
 legendary = False
+fossil = False
 base_hp = 4
 base_attack = 5
 base_defense = 7
@@ -1128,6 +1165,7 @@ tutor_moves = Aqua Tail, Body Slam, Counter, Defense Curl, Dive, Double-Edge, Dy
 [Wartortle]
 page = 49
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 6
 base_defense = 8
@@ -1158,6 +1196,7 @@ tutor_moves = Aqua Tail, Body Slam, Brine, Counter, Defense Curl, Double-Edge, D
 [Blastoise]
 page = 50
 legendary = False
+fossil = False
 base_hp = 8
 base_attack = 8
 base_defense = 10
@@ -1187,6 +1226,7 @@ tutor_moves = Aqua Tail, Avalanche, Body Slam, Brine, Counter, Defense Curl, Div
 [Tododile]
 page = 51
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 7
 base_defense = 6
@@ -1219,6 +1259,7 @@ tutor_moves = Ancient Power, Aqua Tail, Block, Body Slam, Counter, Dive, Double-
 [Croconaw]
 page = 52
 legendary = False
+fossil = False
 base_hp = 7
 base_attack = 8
 base_defense = 8
@@ -1249,6 +1290,7 @@ tutor_moves = Ancient Power, Aqua Tail, Block, Body Slam, Counter, Dive, Double-
 [Feraligatr]
 page = 53
 legendary = False
+fossil = False
 base_hp = 9
 base_attack = 11
 base_defense = 10
@@ -1278,6 +1320,7 @@ tutor_moves = Ancient Power, Aqua Tail, Avalanche, Block, Body Slam, Counter, Di
 [Mudkip]
 page = 54
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 7
 base_defense = 5
@@ -1310,6 +1353,7 @@ tutor_moves = Ancient Power, Aqua Tail, Body Slam, Defense Curl, Dive, Earth Pow
 [Marshtomp]
 page = 55
 legendary = False
+fossil = False
 base_hp = 7
 base_attack = 9
 base_defense = 7
@@ -1340,6 +1384,7 @@ tutor_moves = Ancient Power, Aqua Tail, Body Slam, Counter, Defense Curl, Dive, 
 [Swampert]
 page = 56
 legendary = False
+fossil = False
 base_hp = 10
 base_attack = 11
 base_defense = 9
@@ -1369,6 +1414,7 @@ tutor_moves = Ancient Power, Aqua Tail, Body Slam, Counter, Defense Curl, Dive, 
 [Piplup]
 page = 57
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 5
 base_defense = 5
@@ -1401,6 +1447,7 @@ tutor_moves = Covet, Dive, Icy Wind, Mud-Slap, Pluck, Signal Beam, Sleep Talk, S
 [Prinplup]
 page = 58
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 7
 base_defense = 7
@@ -1431,6 +1478,7 @@ tutor_moves = Covet, Dive, Icy Wind, Mud-Slap, Pluck, Signal Beam, Sleep Talk, S
 [Empoleon]
 page = 59
 legendary = False
+fossil = False
 base_hp = 8
 base_attack = 9
 base_defense = 9
@@ -1460,6 +1508,7 @@ tutor_moves = Avalanche, Covet, Dive, Fury Cutter, Hydro Cannon, Icy Wind, Iron 
 [Oshawott]
 page = 60
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 6
 base_defense = 5
@@ -1492,6 +1541,7 @@ tutor_moves = Aqua Tail, Covet, Helping Hand, Icy Wind, Iron Tail, Sleep Talk, S
 [Dewott]
 page = 61
 legendary = False
+fossil = False
 base_hp = 8
 base_attack = 8
 base_defense = 6
@@ -1522,6 +1572,7 @@ tutor_moves = Aqua Tail, Covet, Helping Hand, Icy Wind, Iron Tail, Sleep Talk, S
 [Samurott]
 page = 62
 legendary = False
+fossil = False
 base_hp = 10
 base_attack = 10
 base_defense = 9
@@ -1551,6 +1602,7 @@ tutor_moves = Aqua Tail, Block, Covet, Helping Hand, Icy Wind, Iron Tail, Knock 
 [Froakie]
 page = 63
 legendary = False
+fossil = False
 base_hp = 4
 base_attack = 6
 base_defense = 4
@@ -1583,6 +1635,7 @@ tutor_moves = Bounce, Icy Wind, Role Play, Snatch, Snore, Spite, Water Pledge, W
 [Frogadier]
 page = 64
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 6
 base_defense = 5
@@ -1613,6 +1666,7 @@ tutor_moves = Bounce, Gunk Shot, Ice Punch, Icy Wind, Low Kick, Role Play, Snatc
 [Greninja]
 page = 65
 legendary = False
+fossil = False
 base_hp = 7
 base_attack = 10
 base_defense = 7
@@ -1642,6 +1696,7 @@ tutor_moves = Bounce, Gunk Shot, Hydro Cannon, Ice Punch, Icy Wind, Low Kick, Ma
 [Caterpie]
 page = 66
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 3
 base_defense = 4
@@ -1671,6 +1726,7 @@ tutor_moves = Bug Bite, Electroweb, Snore, Bug Bite, String Shot
 [Metapod]
 page = 67
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 2
 base_defense = 6
@@ -1699,6 +1755,7 @@ tutor_moves = Bug Bite, Electroweb, Iron Defense, String Shot, Tackle
 [Butterfree]
 page = 68
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 5
 base_defense = 5
@@ -1728,6 +1785,7 @@ tutor_moves = Air Cutter, Bug Bite, Double-Edge, Electroweb, Giga Drain, Ominous
 [Weedle]
 page = 69
 legendary = False
+fossil = False
 base_hp = 4
 base_attack = 4
 base_defense = 3
@@ -1757,6 +1815,7 @@ tutor_moves = Bug Bite, Electroweb, String Shot
 [Kakuna]
 page = 70
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 3
 base_defense = 5
@@ -1785,6 +1844,7 @@ tutor_moves = Bug Bite, Electroweb, Iron Defense, String Shot, Tackle
 [Beedrill]
 page = 71
 legendary = False
+fossil = False
 base_hp = 7
 base_attack = 9
 base_defense = 4
@@ -1814,6 +1874,7 @@ tutor_moves = Air Cutter, Bug Bite, Double-Edge, Drill Run, Electroweb, Endeavor
 [Sewaddle]
 page = 72
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 5
 base_defense = 7
@@ -1846,6 +1907,7 @@ tutor_moves = Bug Bite, Electroweb, Giga Drain, Iron Defense, Magic Coat, Seed B
 [Swadloon]
 page = 73
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 6
 base_defense = 9
@@ -1878,6 +1940,7 @@ tutor_moves = Bug Bite, Electroweb, Giga Drain, Grass Whistle, Iron Defense, Mag
 [Leavanny]
 page = 74
 legendary = False
+fossil = False
 base_hp = 8
 base_attack = 10
 base_defense = 8
@@ -1909,6 +1972,7 @@ tutor_moves = Bug Bite (N), Electroweb, False Swipe (N), Giga Drain, Heal Bell, 
 [Venipede]
 page = 75
 legendary = False
+fossil = False
 base_hp = 3
 base_attack = 5
 base_defense = 6
@@ -1940,6 +2004,7 @@ tutor_moves = Bug Bite, Endeavor, Iron Defense, Rollout(N), Sleep Talk, Snore
 [Whirlipede]
 page = 76
 legendary = False
+fossil = False
 base_hp = 4
 base_attack = 6
 base_defense = 10
@@ -1969,6 +2034,7 @@ tutor_moves = Bug Bite, Endeavor, Iron Defense, Rollout(N), Sleep Talk, Snore
 [Scolipede]
 page = 77
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 10
 base_defense = 9
@@ -1998,6 +2064,7 @@ tutor_moves = Aqua Tail, Bug Bite, Endeavor, Iron Defense, Iron Tail, Megahorn (
 [Wurmple]
 page = 78
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 5
 base_defense = 4
@@ -2027,6 +2094,7 @@ tutor_moves = Bug Bite, Electroweb, Snore, String Shot
 [Silcoon]
 page = 79
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 4
 base_defense = 6
@@ -2055,6 +2123,7 @@ tutor_moves = Bug Bite, Electroweb, Iron Defense, String Shot
 [Beautifly]
 page = 80
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 7
 base_defense = 5
@@ -2083,6 +2152,7 @@ tutor_moves = Air Cutter, Bug Bite, Defog, Double-Edge, Electroweb, Giga Drain, 
 [Cascoon]
 page = 81
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 4
 base_defense = 6
@@ -2111,6 +2181,7 @@ tutor_moves = Bug Bite, Electroweb, Iron Defense, String Shot
 [Dustox]
 page = 82
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 5
 base_defense = 7
@@ -2139,6 +2210,7 @@ tutor_moves = Air Cutter, Bug Bite, Defog, Double-Edge, Electroweb, Giga Drain, 
 [Scatterbug]
 page = 83
 legendary = False
+fossil = False
 base_hp = 4
 base_attack = 4
 base_defense = 4
@@ -2169,6 +2241,7 @@ tutor_moves = Bug Bite
 [Spewpa]
 page = 84
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 2
 base_defense = 6
@@ -2197,6 +2270,7 @@ tutor_moves = Bug Bite, Electroweb, Iron Defense
 [Vivillon]
 page = 85
 legendary = False
+fossil = False
 base_hp = 8
 base_attack = 5
 base_defense = 5
@@ -2205,10 +2279,9 @@ base_special_defense = 5
 base_speed = 9
 types = Bug, Flying
 basic_abilities = Compound Eyes
-advanced_abilities = Shield Dust
-high_ability = Friend Guard
-evolutions = Wonder Skin
-minimum_level = Effect Spore
+advanced_abilities = Shield Dust, Friend Guard, Wonder Skin
+high_ability = Effect Spore
+minimum_level = 10
 diets = Herbivore
 habitats = Forest, Grassland
 egg_groups = bug
@@ -2226,6 +2299,7 @@ tutor_moves = Bug Bite, Electroweb, Endeavor, Giga Drain, Gust (N), Hold Hands, 
 [Fletchling]
 page = 95
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 5
 base_defense = 4
@@ -2258,6 +2332,7 @@ tutor_moves = Heat Wave, Snatch, Snore, Tailwind
 [Fletchinder]
 page = 96
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 7
 base_defense = 6
@@ -2288,6 +2363,7 @@ tutor_moves = Heat Wave, Snatch, Snore, Tailwind
 [Talonflame]
 page = 97
 legendary = False
+fossil = False
 base_hp = 8
 base_attack = 8
 base_defense = 7
@@ -2317,6 +2393,7 @@ tutor_moves = Brave Bird (N), Flare Blitz (N), Heat Wave, Snatch, Snore, Tailwin
 [Oddish]
 page = 125
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 5
 base_defense = 6
@@ -2349,6 +2426,7 @@ tutor_moves = After You, Bullet Seed, Double-Edge, Gastro Acid, Giga Drain, Natu
 [Gloom]
 page = 126
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 7
 base_defense = 7
@@ -2379,6 +2457,7 @@ tutor_moves = After You, Bullet Seed, Double-Edge, Drain Punch, Gastro Acid, Gig
 [Vileplume]
 page = 127
 legendary = False
+fossil = False
 base_hp = 8
 base_attack = 8
 base_defense = 9
@@ -2408,6 +2487,7 @@ tutor_moves = Absorb, After You, Aromatherapy (N), Body Slam, Bullet Seed, Doubl
 [Bellossom]
 page = 128
 legendary = False
+fossil = False
 base_hp = 8
 base_attack = 8
 base_defense = 10
@@ -2437,6 +2517,7 @@ tutor_moves = Absorb, After You, Body Slam, Bullet Seed, Double-Edge, Gastro Aci
 [Pichu]
 page = 144
 legendary = False
+fossil = False
 base_hp = 2
 base_attack = 4
 base_defense = 2
@@ -2468,6 +2549,7 @@ tutor_moves = Body Slam, Counter, Covet, Defense Curl, Double-Edge, Helping Hand
 [Pikachu]
 page = 145
 legendary = False
+fossil = False
 base_hp = 4
 base_attack = 6
 base_defense = 4
@@ -2498,6 +2580,7 @@ tutor_moves = Body Slam, Counter, Covet, Defense Curl, Double-Edge, Dynamic Punc
 [Raichu]
 page = 146
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 9
 base_defense = 6
@@ -2527,6 +2610,7 @@ tutor_moves = Body Slam, Counter, Covet, Defense Curl, Double-Edge, Dynamic Punc
 [Ditto]
 page = 629
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 5
 base_defense = 5
@@ -2554,6 +2638,7 @@ level_moves = 1:Transform
 [Unown]
 page = 630
 legendary = False
+fossil = False
 base_hp = 5
 base_attack = 7
 base_defense = 5
@@ -2581,6 +2666,7 @@ level_moves = 1:Hidden Power
 [Eevee]
 page = 631
 legendary = False
+fossil = False
 base_hp = 6
 base_attack = 6
 base_defense = 5
@@ -2612,6 +2698,7 @@ tutor_moves = Body Slam, Covet, Double-Edge, Heal Bell, Helping Hand, Hyper Voic
 [Vaporeon]
 page = 632
 legendary = False
+fossil = False
 base_hp = 13
 base_attack = 7
 base_defense = 6
@@ -2641,6 +2728,7 @@ tutor_moves = Aqua Tail, Body Slam, Brine, Covet, Dive, Double-Edge, Heal Bell, 
 [Jolteon]
 page = 633
 legendary = False
+fossil = False
 base_hp = 7
 base_attack = 7
 base_defense = 6
@@ -2670,6 +2758,7 @@ tutor_moves = Body Slam, Covet, Double-Edge, Heal Bell, Helping Hand, Hyper Voic
 [Flareon]
 page = 634
 legendary = False
+fossil = False
 base_hp = 7
 base_attack = 13
 base_defense = 6
@@ -2699,6 +2788,7 @@ tutor_moves = Body Slam, Covet, Double-Edge, Heal Bell, Heat Wave, Helping Hand,
 [Espeon]
 page = 635
 legendary = False
+fossil = False
 base_hp = 7
 base_attack = 7
 base_defense = 6
@@ -2728,6 +2818,7 @@ tutor_moves = Body Slam, Covet, Double-Edge, Heal Bell, Helping Hand, Hyper Voic
 [Umbreon]
 page = 636
 legendary = False
+fossil = False
 base_hp = 10
 base_attack = 7
 base_defense = 11
@@ -2757,6 +2848,7 @@ tutor_moves = Body Slam, Covet, Dark Pulse, Double-Edge, Foul Play, Heal Bell, H
 [Leafeon]
 page = 637
 legendary = False
+fossil = False
 base_hp = 7
 base_attack = 11
 base_defense = 13
@@ -2786,6 +2878,7 @@ tutor_moves = Bullet Seed, Covet, Fury Cutter, Giga Drain, Heal Bell, Helping Ha
 [Glaceon]
 page = 638
 legendary = False
+fossil = False
 base_hp = 7
 base_attack = 6
 base_defense = 11
@@ -2815,6 +2908,7 @@ tutor_moves = Aqua Tail, Avalanche, Covet, Heal Bell, Helping Hand, Hyper Voice,
 [Sylveon]
 page = 639
 legendary = False
+fossil = False
 base_hp = 10
 base_attack = 7
 base_defense = 7
@@ -2843,6 +2937,7 @@ tutor_moves = Covet, Disarming Voice (N), Heal Bell, Helping Hand, Hyper Voice, 
 ; [DEFAULT]
 ; page = 
 ; legendary = False
+; fossil = False
 ; base_hp = 
 ; base_attack = 
 ; base_defense = 
