Added another page of Bug moves.

--- a/moves.ini
+++ b/moves.ini
@@ -1,4 +1,5 @@
 [Attack Order]
+page = 346
 type = Bug
 frequency = EOT
 ac = 2
@@ -11,6 +12,7 @@ effect = Attack Order is a Critical Hit on 18+.
 contest_type = Smart
 contest_effect = Incentives
 [Bug Bite]
+page = 346
 type = Bug
 frequency = At-Will
 ac = 2
@@ -23,6 +25,7 @@ effect = If the target has a stored Digestion Buff or has traded in a Digestion 
 contest_type = Tough
 contest_effect = Attention Grabber
 [Bug Buzz]
+page = 346
 type = Bug
 frequency = Scene, 2
 ac = 2
@@ -35,6 +38,7 @@ effect = Bug Buzz lowers the Special Defense of all targets on 19+.
 contest_type = Cute
 contest_effect = Incentives
 [Defend Order]
+page = 346
 type = Bug
 frequency = EOT
 ac = None
@@ -43,7 +47,125 @@ ranges = Self
 effect = Raise the user’s Defense and Special Defense 1 Combat Stage each.
 contest_type = Smart
 contest_effect = Get Ready!
+[Fell Stinger]
+page = 346
+type = Bug
+frequency = At-Will
+ac = 2
+damage_base = 3
+damage_roll = 1d6+5
+damage_fixed = 9
+class = Physical
+ranges = Melee, 1 Target
+effect = If the user successfully knocks out a target with Fell Stinger, raise their Attack by 2 Combat Stages.
+contest_type = Smart
+contest_effect = Desperation
+[Fury Cutter]
+page = 346
+type = Bug
+frequency = At-Will
+ac = 3
+damage_base = 4
+damage_roll = 1d8+6
+damage_fixed = 11
+class = Physical
+ranges = Melee, 1 Target
+effect = If Fury Cutter is used successfully and consecutively on the same target, the Damage Base is increased by +4 to a maximum of 16. For example, the first hit would have a DB of 4; the second hit a DB of 8; the third hit a DB of 12; the fourth and further hits a DB of 16. If Fury Cutter misses or fails to damage its target, its Damage Base resets.
+contest_type = Cool
+contest_effect = Reliable
+[Heal Order]
+page = 346
+type = Bug
+frequency = Daily, 2
+ac = None
+class = Status
+ranges = Self
+effect = The user regains Hit Points equal to half of its full Hit Point value.
+contest_type = Smart
+contest_effect = Reflective Appeal
+[Infestation]
+page = 347
+type = Bug
+frequency = Scene, 2
+ac = 4
+damage_base = 4
+damage_roll = 1d8+6
+damage_fixed = 11
+class = Special
+ranges = 3, 1 Target
+effect = The Target is put in a Vortex.
+contest_type = Smart
+contest_effect = Gamble
+[Leech Life]
+page = 347
+type = Bug
+frequency = At-Will
+ac = 2
+damage_base = 2
+damage_roll = 1d6+3
+damage_fixed = 7
+class = Physical
+ranges = Melee, 1 Target
+effect = After the target takes damage, the user gains Hit Points equal to half of the damage they dealt to the target.
+contest_type = Smart
+contest_effect = Good Show!
+[Megahorn]
+page = 347
+type = Bug
+frequency = Scene, 2
+ac = 5
+damage_base = 12
+damage_roll = 3d12+10
+damage_fixed = 30
+class = Physical
+ranges = Melee, 1 Target, Push
+effect = The target is pushed 1 metre.
+contest_type = Cool
+contest_effect = Desperation
+[Pin Missile]
+page = 347
+type = Bug
+frequency = EOT
+ac = 4
+damage_base = 4
+damage_roll = 1d6+5
+damage_fixed = 9
+class = Physical
+ranges = 6, 1 Target, Five Strike
+contest_type = Cool
+contest_effect = Reliable
+[Powder]
+page = 347
+type = Bug
+frequency = Scene, 2
+ac = None
+class = Status
+ranges = 6, 1 Target, Interrupt, Powder
+effect = The target is dusted with a Coat of flammable powder. If it uses a damaging Fire-Type attack, the attack is negated and instad creates a Blast 3 centered on itself as the powder explodes, and the Coat is removed. All targets within the Blast take damage equal to what the user of the Fire-Type attack would roll for the damage of their attack. This damage is Typeless or Fire-Type, whichever would be more effective.
+contest_type = Beauty
+contest_effect = Sabotage
+[Quiver Dance]
+page = 347
+type = Bug
+frequency = Scene, 2
+ac = None
+class = Status
+ranges = Self
+effect = Raise the user’s Special Attack, Special Defense, and Speed by +1 Combat Stage each.
+contest_type = Cool
+contest_effect = Get Ready!
+[Rage Powder]
+page = 347
+type = Bug
+frequency = Scene, 2
+ac = None
+class = Status
+ranges = Burst 1 or Line 6, Powder
+effect = All targets hit by Rage Powder are Enraged. While enraged, they must shift to target the user when using a Move or Attack if the user is within reach. If the user is Fainted or Switched out, all targets hit by Rage Powder are cured of rage.
+contest_type = Smart
+contest_effect = Tease
 ; [Template]
+; page = 
 ; type = 
 ; frequency = 
 ; ac = 
