--- a/pokemon.ini
+++ b/pokemon.ini
@@ -2934,6 +2934,100 @@ skills = Athletics:3d6+2, Acrobatics:3d6+1, Combat:3d6+1, Stealth:3d6+2, Percept
 level_moves = 1:Tackle, 1:Tail Whip, 1:Helping Hand, 5:Sand Attack, 9:Fairy Wind, 13:Quick Attack, 17:Swift, 20:Draining Kiss, 25:Skill Swap, 29:Misty Terrain, 33:Light Screen, 37:Moonblast, 41:Last Resort, 45:Psych Up
 tm_moves = Psyshock, Calm Mind, Toxic, Hidden Power, Sunny Day, Hyper Beam, Light Screen, Protect, Rain Dance, Safeguard, Frustration, Return, Dig, Shadow Ball, Double Team, Reflect, Facade, Rest, Attract, Round, Echoed Voice, Retaliate, Giga Impact, Flash, Psych Up, Swagger, Sleep Talk, Substitute, Dazzling Gleam, Confide
 tutor_moves = Covet, Disarming Voice (N), Heal Bell, Helping Hand, Hyper Voice, Iron Tail, Last Resort, Magic Coat, Skill Swap, Snore
+[Omanyte]
+page = 640
+legendary = False
+fossil = True
+base_hp = 4
+base_attack = 4
+base_defense = 10
+base_special_attack = 9
+base_special_defense = 6
+base_speed = 4
+types = Rock, Water
+basic_abilities = Shell Armor, Weak Armor
+advanced_abilities = Shell Shield, Swift Swim
+high_ability = Skill Link
+evolutions = Omastar,40
+minimum_level = 1
+diets = Herbivore
+habitats = Cave, Ocean
+egg_groups = Water 1, Water 3
+gender_ratio_m = 87.5
+average_hatch_rate_days = 16
+family = Omanyte, Omastar
+capabilities = Overland:3, Swim:5, High Jump:1, Long Jump:1, Power:1, Gilled, Naturewalk:Ocean, Underdog
+height = 1'4",0.4m
+height_class = Small
+weight = 16.5 lbs.,7.5kg
+weight_class = 1
+skills = Athletics:2d6+2, Acrobatics:2d6, Combat:2d6, Stealth:2d6+2, Perception:2d6, Focus:3d6+1
+level_moves = 1:Constrict, 1:Withdraw, 7:Bite, 10:Water Gun, 16:Rollout, 19:Leer, 25:Mud Shot, 28:Brine, 34:Protect, 37:Ancient Power, 43:Tickle, 46:Rock Blast, 52:Shell Smash, 55:Hydro Pump
+hm_moves = Surf, Waterfall, Dive
+tm_moves = Toxic, Hail, Hidden Power, Ice Beam, Blizzard, Hyper Beam, Protect, Rain Dance, Frustration, Smack Down, Return, Double Team, Sandstorm, Rock Tomb, Facade, Rest, Attract, Thief, Round, Scald, Giga Impact, Rock Polish, Stone Edge, Gyro Ball, Rock Slide, Swagger, Sleep Talk, Substitute, Rock Smash
+egg_moves = Aurora Beam, Bide, Bubble Beam, Haze, Knock Off, Muddy Water, Reflect Type, Rock Slide, Slam, Spikes, Supersonic, Toxic Spikes, Water Pulse, Whirlpool, Wring Out
+tutor_moves = Ancient Power, Bind, Body Slam, Dive, Double-Edge, Earth Power, Icy Wind, Iron Defense, Knock Off, Rollout, Sleep Talk, Snore, Stealth Rock
+[Omastar]
+page = 641
+legendary = False
+fossil = True
+base_hp = 7
+base_attack = 6
+base_defense = 13
+base_special_attack = 12
+base_special_defense = 7
+base_speed = 6
+types = Rock, Water
+basic_abilities = Shell Armor, Weak Armor
+advanced_abilities = Rough Skin, Swift Swim
+high_ability = Skill Link
+minimum_level = 40
+diets = Omnivore
+habitats = Ocean
+egg_groups = Water 1, Water 3
+gender_ratio_m = 87.5
+family = Omanyte, Omastar
+capabilities = Overland:4, Swim:7, High Jump:1, Long Jump:1, Power:4, Gilled, Naturewalk:Ocean
+height = 3'3",1.0m
+height_class = Medium
+weight = 77.2 lbs.,35.0kg
+weight_class = 3
+skills = Athletics:, Acrobatics:, Combat:, Stealth:, Perception:, Focus:
+level_moves = 7:Bite, 10:Water Gun, 16:Rollout, 19:Leer, 25:Mud Shot, 28:Brine, 34:Protect, 37:Ancient Power, 40:Spike Cannon, 48:Tickle, 56:Rock Blast, 67:Shell Smash, 75:Hydro Pump
+hm_moves = Surf, Waterfall, Dive
+tm_moves = Toxic, Hail, Hidden Power, Ice Beam, Blizzard, Protect, Rain Dance, Frustration, Smack Down, Return, Double Team, Sandstorm, Rock Tomb, Facade, Rest, Attract, Thief, Round, Scald, Rock Polish, Gyro Ball, Rock Slide, Swagger, Sleep Talk, Substitute, Rock Smash
+tutor_moves = Ancient Power, Bind, Body Slam, Dive, Double-Edge, Earth Power, Hydro Pump (N), Icy Wind, Iron Defense, Knock Off, Mud-Slap, Rollout, Seismic Toss, Sleep Talk, Snore, Stealth Rock, Water Pulse
+[Mew]
+page = 683
+legendary = True
+fossil = False
+base_hp = 10
+base_attack = 10
+base_defense = 10
+base_special_attack = 10
+base_special_defense = 10
+base_speed = 10
+types = Psychic
+basic_abilities = Synchronise, Serene Grace
+advanced_abilities = Trace, Magic Guard
+high_ability = Magic Bounce
+minimum_level = 1
+diets = Omnivore
+habitats = Forest, Mountain, Rainforest
+egg_groups = Ditto
+gender_ratio_m = No Gender
+average_hatch_rate_days = 75
+family = Mew
+capabilities = Overland:7, Swim:4, Sky:6, High Jump:2, Long Jump:2, Power:3, Aura Reader, Glow, Invisibility, Telekinetic, Telepath, Shapeshifter
+height = 1'4",0.4m
+height_class = Small
+weight = 8.8 lbs.,4.0kg
+weight_class = 1
+skills = Athletics:3d6, Acrobatics:4d6+2, Combat:4d6, Stealth:5d6+2, Perception:4d6, Focus:6d6
+level_moves = 1:Pound, 1:Reflect Type, 1:Transform, 10:Mega Punch, 20:Metronome, 30:Psychic, 40:Barrier, 50:Ancient Power, 60:Amnesia, 70:Me First, 80:Baton Pass, 90:Nasty Plot, 100:Aura Sphere
+hm_moves = Any
+tm_moves = Any
+tutor_moves = Any
 ; [DEFAULT]
 ; page = 
 ; legendary = False
